rules/k8s/post-transformation/templates/k8s-ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /petclinic
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
